# sdk

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  Taskfile.yml  docs-audit-report.md  reagan_plan_docs_merge.md  spec.md
.claude/commands/: generate.md  test-docs.md
.github/workflows/: auto-release-on-version-bump.yml  daily-ux-tests.yml  publish.yml
browser-use-node/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
browser-use-node/examples/: authentication.ts  basic.ts  (+6 more)
browser-use-python/: README.md  pyproject.toml
browser-use-python/docs/: cache-script.md
browser-use-python/examples/: authentication.py  basic.py  cache_rerun.py  profiles.py  sessions.py  stealth.py  streaming.py  structured_output.py  test_cache_local.py
browser-use-python/src/browser_use_sdk/: __init__.py
browser-use-python/src/browser_use_sdk/_core/: errors.py  http.py  x402.py
browser-use-python/src/browser_use_sdk/v2/: __init__.py  client.py  helpers.py
browser-use-python/src/browser_use_sdk/v2/resources/: billing.py  browsers.py  files.py  marketplace.py  profiles.py  sessions.py  skills.py  tasks.py
browser-use-python/src/browser_use_sdk/v3/: __init__.py  client.py  helpers.py
browser-use-python/src/browser_use_sdk/v3/resources/: browsers.py  profiles.py  sessions.py  workspaces.py
browser-use-python/tests/: test_live.py  test_prod.py  test_v3_byok.py  test_vibe.py
docs/: EXCALIDRAW_SCHEMA_PLAN.md  README.md  bu-agent-api.mdx  docs.json  examples.mdx  faq.mdx  generate-llms-txt.sh  introduction.mdx  llm-quickstart.mdx  llms-full.txt  llms.txt  open-source.mdx  pricing.mdx  product-colors.js  start.mdx  style.css
fern/: docs.yml  fern.config.json  generators.yml
snapshots/: v2.json  v3.json
ux-tests/: flows.ts  package.json  run.ts
(+213 files in other folders)
