[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-use-sdk"
version = "3.0.0"
description = "Python SDK for the Browser Use cloud API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pyright>=1.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/browser_use_sdk"]

[tool.pytest.ini_options]
markers = [
    "prod: production smoke tests (hit real API)",
    "live: live integration tests (hit localhost)",
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = ["src", "tests", "examples"]
